@@ -237,3 +237,5 @@ En ver variables que diga puntero vars donde está y a donde apunta
 
 
 -estilos gui en documentación
+
+-en ventana info offsets next, ula separado de lores
